
* Version 1.7.3 (released 2012-04-03) [alpha]

** libgsasl: The SAML20 mechanism is now enabled by default.

** libgsasl: The SAML20 mechanism was updated to draft -09.
There was a minor protocol change, the final client response is now
"=" instead of the empty string.

** libgsasl: Unified some of the SAML and OpenID callbacks/properties.
See API changes below.

* Version 1.7.2 (released 2012-03-28) [alpha]

** libgsasl: Updated OPENID20 implementation.
Now following draft-ietf-kitten-sasl-openid-08.

** API and ABI modifications.
GSASL_OPENID20_REDIRECT_URL: Added, new property.
GSASL_OPENID20_OUTCOME_DATA:: Added, new property.
GSASL_OPENID20_AUTHENTICATE_IN_BROWSER: Added, new callback.
GSASL_VALIDATE_OPENID20: Added, new callback.
GSASL_NO_OPENID20_REDIRECT_URL: Added, new error code.
GSASL_OPENID20_AUTH_IDENTIFIER: Removed, use GSASL_AUTHID instead.
GSASL_NO_OPENID20_AUTH_IDENTIFIER: Removed error code.

* Version 1.7.1 (released 2012-02-09) [alpha]

** libgsasl: Implement OPENID20 mechanism for OpenID authentication.
Following draft-ietf-kitten-sasl-openid-03.

** libgsasl.pc: Add a Libs.private.
Reported by Volker Grabsch <vog@notjusthosting.com>.

** Demand gettext >= 0.18.1 in order to get newer M4 files.
The old M4 files associated with 0.17 caused problems on Solaris,
which will hopefully be fixed with this.  Reported by Dagobert
Michelsen <dam@opencsw.org>.

** i18n: Updated translations.

** API and ABI modifications.
GSASL_CB_TLS_UNIQUE: Added, new property.
GSASL_OPENID20_AUTH_IDENTIFIER: Added, new property.
GSASL_NO_CB_TLS_UNIQUE: Added, new error code.
GSASL_NO_OPENID20_AUTH_IDENTIFIER: Added, new error code.

* Version 1.7.0 (released 2010-10-22) [alpha]

** SAML20: Implement new mechanism.
Implements draft-ietf-kitten-sasl-saml-01.  See tests/saml20.c for a
self test that illustrate how the mechanism is intended to be used in
both client and server mode.

** API and ABI modifications.
GSASL_NO_SAML20_IDP_IDENTIFIER: ADDED.