@@ -37,11 +37,11 @@ Currently there is some support for the following mechanisms:
   - DIGEST-MD5 (RFC 2831)
   - SCRAM-SHA-1 and SCRAM-SHA-1-PLUS (RFC 5802)
   - GS2-KRB5 (RFC 5801, no CB, requires GSS, Heimdal, or MIT Kerberos)
+  - SAML20 (RFC 6595)
+  - OPENID20 (RFC 6616)
   - LOGIN (non-standard)
   - NTLM (non-standard, client only, requires Libntlm)
   - KERBEROS_V5 (experimental, requires Shishi)
-  - OPENID20 (experimental)
-  - SAML20 (experimental)
 
 The library should be portable to all C89 platforms.  The command-line
 application currently requires POSIX for network communication.
