@@ -20,6 +20,10 @@ See the file COPYING.
 The manual is not included in this directory, see the full GNU SASL
 archive.
 
+If you need help to use GNU SASL, or wish to help others, you are
+invited to join our mailing list help-gsasl@gnu.org, see
+<https://lists.gnu.org/mailman/listinfo/help-gsasl>.
+
 Currently there is some support for the following mechanisms:
 
   - CRAM-MD5 (RFC 2195)
@@ -31,11 +35,11 @@ Currently there is some support for the following mechanisms:
   - DIGEST-MD5 (RFC 2831)
   - SCRAM-SHA-1 and SCRAM-SHA-1-PLUS (RFC 5802)
   - GS2-KRB5 (RFC 5801, no CB, requires GSS, Heimdal, or MIT Kerberos)
+  - SAML20 (RFC 6595)
+  - OPENID20 (RFC 6616)
   - LOGIN (non-standard)
   - NTLM (non-standard, client only, requires Libntlm)
   - KERBEROS_V5 (experimental, requires Shishi)
-  - SAML20 (draft-ietf-kitten-sasl-saml-01)
-  - OPENID20 (draft-ietf-kitten-sasl-openid-03)
 
 The library should be portable to all C89 platforms.
 
