@@ -137,7 +137,8 @@ extern "C"
    * @GSASL_NO_HOSTNAME: Could not get required hostname.
    * @GSASL_NO_CB_TLS_UNIQUE: Could not get required tls-unique CB.
    * @GSASL_NO_SAML20_IDP_IDENTIFIER: Could not get required SAML IdP.
-   * @GSASL_NO_SAML20_REDIRECT_URL: Could not get required redirect URL.
+   * @GSASL_NO_SAML20_REDIRECT_URL: Could not get required SAML
+   *   redirect URL.
    * @GSASL_NO_OPENID20_REDIRECT_URL: Could not get required OpenID
    *   redirect URL.
    * @GSASL_GSSAPI_RELEASE_BUFFER_ERROR: GSS-API library call error.
@@ -308,11 +309,13 @@ extern "C"
    *   to avoid re-computation and storing passwords in the clear.
    * @GSASL_CB_TLS_UNIQUE: Base64 encoded tls-unique channel binding.
    * @GSASL_SAML20_IDP_IDENTIFIER: SAML20 user IdP URL.
-   * @GSASL_SAML20_REDIRECT_URL: SAML20 challenge from server to client.
-   * @GSASL_OPENID20_REDIRECT_URL: OpenID 2.0 redirect URL.
+   * @GSASL_SAML20_REDIRECT_URL: SAML 2.0 URL to access in browser.
+   * @GSASL_OPENID20_REDIRECT_URL: OpenID 2.0 URL to access in browser.
    * @GSASL_OPENID20_OUTCOME_DATA: OpenID 2.0 authentication outcome data.
-   * @GSASL_SAML20_AUTHENTICATE_IN_BROWSER: Request to perform SAML20.
-   * @GSASL_OPENID20_AUTHENTICATE_IN_BROWSER: Request to perform OpenID 2.0.
+   * @GSASL_SAML20_AUTHENTICATE_IN_BROWSER: Request to perform SAML 2.0
+   *   authentication in browser.
+   * @GSASL_OPENID20_AUTHENTICATE_IN_BROWSER: Request to perform OpenID 2.0
+   *   authentication in browser.
    * @GSASL_VALIDATE_SIMPLE: Request for simple validation.
    * @GSASL_VALIDATE_EXTERNAL: Request for validation of EXTERNAL.
    * @GSASL_VALIDATE_ANONYMOUS: Request for validation of ANONYMOUS.
